# xboxdrv

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Makefile  NEWS  PROTOCOL  README  README.md  SConstruct  TODO  Xbox360  abs_to_btn.cpp  abs_to_btn.hpp  abs_to_rel.cpp  abs_to_rel.hpp  autofire_button.cpp  autofire_button.hpp  bin2h.py  btn_to_abs.cpp  btn_to_abs.hpp  chatpad.xkb  command_line_options.cpp  command_line_options.hpp  control.cpp  control.hpp  control_factory.cpp  control_factory.hpp  controller2.scm  dbus_glue.py  evdev_driver.cpp  evdev_driver.hpp  file_reader.hpp  flake.nix  graph.dot  guix.scm  helper.cpp  (+39 more)
chatpad/: SConstruct  chatpad.cpp  chatpad.py  chatpad2.cpp  chatpad3.cpp  chatpad4.cpp  reset.cpp  usbreset.cpp
contrib/: hal_plugandplay  usb_added  usb_removed
data/: org.seul.Xboxdrv.conf
debian/: changelog  control  copyright  docs  rules
directx/: .gitignore  SConstruct  hello_world.cpp
directx/DirectInputQuery/: DirectInputQuery.sln  DirectInputQuery.vcproj  dinputquery.cpp
doc/: Makefile  config.xsl  sensitivity.gnuplot  virtualkeyboard.1  virtualkeyboard.xml  xbox360-asciiart.txt  xboxdrv-daemon.1  xboxdrv-daemon.xml  xboxdrv.1  xboxdrv.xml
examples/: 8way-dpad.xboxdrv  absolutemouse.xboxdrv  analogstick-keyboard.xboxdrv  basic-keyboard-emulation.xboxdrv  calibrate.macro  constfilter.xboxdrv  cyclekey.xboxdrv  default.xboxdrv  descent.xboxdrv  dosbox.xboxdrv  dukenukem3d-calibrate.macro  dukenukem3d-load.macro  dukenukem3d-save.macro  dukenukem3d.xboxdrv  evdev.xboxdrv  fceux.xboxdrv  fceux2.xboxdrv  hama-crux-triggerhappy.xboxdrv  hama-crux.xboxdrv  helloworld.macro  joy2key.xboxdrv  log.xboxdrv  microsoft-ergonomic-4000.xboxdrv  mouse.xboxdrv  multi-controller.sh  playstation3.xboxdrv  project-black-sun.xboxdrv  ps4_bluetooth.xboxdrv  ps4_usb.xboxdrv  responsecurve-generator.py  rotate.xboxdrv  sensitivity.xboxdrv  shift.xboxdrv  spnav-mouse.xboxdrv  tiefighter.xboxdrv  two-controller.sh  two-sticks.xboxdrv  unbound-events.xboxdrv  virtualkeyboard.xboxdrv  warsow.xboxdrv  (+8 more)
gui/: .gitignore  button.xpm  inputcfg.py
hal/: xboxdrv_policy.fdi  xboxdrv_preprobe.fdi
kernel/: Makefile  chatpad.c  xboxdrv.c
runxboxdrv/: README  example.cfg  keyconfig.plist  oolite.ini  runxboxdrv
src/: abs_list.x  abs_port.hpp  arg_parser.cpp  arg_parser.hpp  axis_event.cpp  axis_event.hpp  axis_event_factory.cpp  axis_event_factory.hpp  axis_filter.cpp  axis_filter.hpp  axis_map.cpp  axis_map.hpp  axis_map_option.hpp  bluetooth.cpp  bluetooth.hpp  button_combination.cpp  button_combination.hpp  button_combination_map.hpp  button_event.cpp  button_event.hpp  button_event_factory.cpp  button_event_factory.hpp  button_filter.cpp  button_filter.hpp  button_map.cpp  button_map.hpp  button_map_option.hpp  chatpad.cpp  chatpad.hpp  command_line_options.cpp  command_line_options.hpp  controller.cpp  controller.hpp  controller_config.cpp  controller_config.hpp  controller_config_set.cpp  controller_config_set.hpp  controller_factory.cpp  controller_factory.hpp  controller_match_rule.cpp  (+178 more)
src/axisevent/: abs_axis_event_handler.cpp  abs_axis_event_handler.hpp  key_axis_event_handler.cpp  key_axis_event_handler.hpp  log_axis_event_handler.cpp  log_axis_event_handler.hpp  rel_axis_event_handler.cpp  rel_axis_event_handler.hpp  rel_repeat_axis_event_handler.cpp  rel_repeat_axis_event_handler.hpp  rumble_axis_event_handler.cpp  rumble_axis_event_handler.hpp
src/axisfilter/: calibration_axis_filter.cpp  calibration_axis_filter.hpp  const_axis_filter.cpp  const_axis_filter.hpp  deadzone_axis_filter.cpp  deadzone_axis_filter.hpp  invert_axis_filter.cpp  invert_axis_filter.hpp  log_axis_filter.cpp  log_axis_filter.hpp  lowpass_axis_filter.cpp  lowpass_axis_filter.hpp  relative_axis_filter.cpp  relative_axis_filter.hpp  response_curve_axis_filter.cpp  response_curve_axis_filter.hpp  sensitivity_axis_filter.cpp  sensitivity_axis_filter.hpp
src/buttonevent/: abs_button_event_handler.cpp  abs_button_event_handler.hpp  cycle_key_button_event_handler.cpp  cycle_key_button_event_handler.hpp  cycle_key_ref_button_event_handler.cpp  cycle_key_ref_button_event_handler.hpp  cycle_key_sequence.cpp  cycle_key_sequence.hpp  exec_button_event_handler.cpp  exec_button_event_handler.hpp  key_button_event_handler.cpp  key_button_event_handler.hpp  log_button_event_handler.cpp  log_button_event_handler.hpp  macro_button_event_handler.cpp  macro_button_event_handler.hpp  rel_button_event_handler.cpp  rel_button_event_handler.hpp
src/buttonfilter/: autofire_button_filter.cpp  autofire_button_filter.hpp  click_button_filter.cpp  click_button_filter.hpp  const_button_filter.cpp  const_button_filter.hpp  delay_button_filter.cpp  delay_button_filter.hpp  invert_button_filter.cpp  invert_button_filter.hpp  log_button_filter.cpp  log_button_filter.hpp  toggle_button_filter.cpp  toggle_button_filter.hpp
src/controller/: evdev_controller.cpp  evdev_controller.hpp  firestorm_dual_controller.cpp  firestorm_dual_controller.hpp  generic_usb_controller.cpp  generic_usb_controller.hpp  hama_crux_controller.cpp  hama_crux_controller.hpp  logitech_f310_controller.cpp  logitech_f310_controller.hpp  playstation3_bluetooth_controller.cpp  playstation3_bluetooth_controller.hpp  playstation3_usb_controller.cpp  (+15 more)
test/: axisfilter_test.cpp  buttonfilter_test.cpp  dirname_test.cpp  ini_parser_gtest.cpp  ini_parser_test.cpp  invalid-section-name.xboxdrv  invalid-variable-name-ui-buttonmap.xboxdrv  invalid-variable-name.xboxdrv  on-connect.sh  on-disconnect.sh  process_name_value_string_test.cpp  unpack_test.cpp  usb_read_thread_test.cpp  usb_system_test.cpp  util_string_gtest.cpp  xboxdrv-daemon-connect-scripts.sh  xboxdrv-daemon.sh  xboxdrv-device-naming.sh  xboxdrv-device-naming2.sh  xboxdrv-device-naming3.sh  xboxdrv-match-rules.sh  xboxdrv-multi-sections.xboxdrv
tools/: .gitignore  README  SConstruct  evsend.cpp  evtest.c  evtestplus.cpp  jstest.1  jstest.c  usbattach.c  usbcat.cpp  usbdebug.cpp  usbread.cpp  usbtool.c  wiimote.cpp  xboxdrv-daemon.py
(+151 files in other folders)
